# ARC_RepairPlatform

./: .gitattributes  .gitignore  README.md
repair_interface/: CMakeLists.txt  package.xml
repair_interface/action/: RepairAction.action
ur16_repair/: CMakeLists.txt  package.xml
ur16_repair/config/: params.yaml
ur16_repair/include/ur16_repair/: main_menu.hpp
ur16_repair/include/ur16_repair/repair/: plane_geometry.hpp  repair_operations.hpp  surface_detection.hpp
ur16_repair/include/ur16_repair/ui/: main_menu.hpp
ur16_repair/launch/: ur16_repair.launch.py
ur16_repair/src/: main_menu.cpp  supervisor.cpp
ur16_repair/src/cloud/: laser_map.cpp  laser_to_cloud.cpp  voxel_mapper.cpp
ur16_repair/src/repair/: plane_geometry.cpp  repair_operations.cpp  repair_server.cpp  surface_detection.cpp
ur16_repair/src/ui/: main_menu.cpp  renderer.cpp
